--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <meta name="description" content="Affordable and professional web design">
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Brad Traversy">
-    <title>Acme Web Design | Welcome</title>
+    <title>Acme Web D| هيلاكس</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="mn.webp">
   </head>
+  <style>
+  .member {
+    background-color: #f2f2f2;
+    padding: 10px;
+    margin: 5px;
+    display: inline-block;
+  }
+</style>
+
   <body>
     <header>
       <div class="container">
@@ -63,7 +72,19 @@
         </div>
       </div>
     </section>
-
+    <div id="team">
+      <h2>فريق التصميم</h2>
+      <div class="member">
+        <h3>ماجد المهندس</h3>
+      </div>
+      <div class="member">
+        <h3>قصي عمر</h3>
+      </div>
+      <div class="member">
+        <h3>محمد السكني</h3>
+      </div>
+    </div>
+    
     <section id="contact">
       <div class="container">
         <h1>تواصل معنا</h1>
