--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta name="description" content="Affordable and professional web design">
   <meta name="keywords" content="web design, affordable web design, professional web design">
   <meta name="author" content="Brad Traversy">
-  <title>Acme Web D| هيلاكس</title>
+  <title>  | هيلاكس</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="mn.webp">
 <style>
